test/scc/ext/tm/semantic-errors/004.t
void test(volatile int a) _Transaction_safe
{
}